Consertando o histórico de transação e pagamentos